--- a/web/themes/custom/icosaedrico/templates/blocks/block--icosaedrico-content.html.twig
+++ b/web/themes/custom/icosaedrico/templates/blocks/block--icosaedrico-content.html.twig
@@ -26,7 +26,7 @@
  * @see template_preprocess_block()
  */
 #}
-<div{{ attributes }}>
+<div{{ attributes.addClass("mt-8") }}>
   {{ title_prefix }}
   {% if label %}
     {% include "icosaedrico:heading" with {
