--- a/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
+++ b/web/themes/custom/icosaedrico/templates/content/node--projects--card.html.twig
@@ -81,6 +81,7 @@
         heading_classes: "card__title",
       } only %}
       {{ content.body }}
+      {{ content.field_project_tech }}
+      {{ content.field_project_url }}
     {% endblock %}
 {% endembed %}
-
