--- a/web/themes/custom/icosaedrico/components/molecules/calendar_sheet/calendar_sheet.css
+++ b/web/themes/custom/icosaedrico/components/molecules/calendar_sheet/calendar_sheet.css
@@ -1,70 +1,70 @@
-[data-component-id="icosaedrico:calendar_sheet"] {
-  /* @todo Add your styles here. */
-}
+
 .calendar-sheet {
-  max-width: max-content;
-}
-.month {
-  position: relative;
-  background-color: #6cbc80;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-  line-height: 1.4rem;
-  overflow: hidden;
-  border-top: solid 1px #00000036;
-}
-.month:before {
-  content: "";
-  display: block;
-  /* background: #0000004a; */
-  width: 0;
-  height: 0;
-  right: 0;
-  position: absolute;
-  top: 0;
-  border-right: solid red 0;
-  border-bottom: solid #00000024 2rem;
-  border-top: solid green 0;
-  border-left: solid 2rem transparent;
-}
-.day-of-week {
-  background-color: #fbf7ec;
-  font-size: 0.6rem;
-  text-align: center;
-  color: #000000a3;
-  text-transform: uppercase;
-  line-height: 1rem;
-  border-top: solid 3px #00000021;
-}
-.day-of-month {
-  position: relative;
-  background-color: #fbf7ec;
-  font-size: 1.8rem;
-  font-weight: bold;
-  width: 4rem;
-  text-align: center;
-  line-height: 1.2rem;
-  padding-block-end: 0.7rem;
-  color: #000000a3;
-}
-.day-of-month::before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  right: 0;
-  position: absolute;
-  border-right: solid red 0;
-  border-bottom: solid #ffffff 0.8rem;
-  border-top: solid green 0;
-  border-left: solid 0.6rem #d7d0bf;
-  bottom: 0;
-}
-.year {
-  text-align: center;
-  font-weight: bold;
-  color: #da9696;
-  font-size: 1rem;
+  width: 4em;
+  font-size: .8rem;
+
+  .month {
+    position: relative;
+    background-color: #6cbc80;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    line-height: 1.4em;
+    overflow: hidden;
+    border-top: solid 1px #00000036;
+
+    &:before {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        right: 0;
+        position: absolute;
+        top: 0;
+        border-right: solid red 0;
+        border-bottom: solid #00000024 4em;
+        border-top: solid green 0;
+        border-left: solid 4em transparent;
+      }
+  }
+
+  .day-of-week {
+    background-color: #fbf7ec;
+    font-size: .5em;
+    text-align: center;
+    color: #000000a3;
+    text-transform: uppercase;
+    border-top: solid 3px #00000021;
+  }
+
+  .day-of-month {
+    position: relative;
+    background-color: #fbf7ec;
+    font-size: 1.8em;
+    font-weight: bold;
+    text-align: center;
+    line-height: .7em;
+    padding-block-end: .4em;
+    color: #000000a3;
+  }
+
+  .day-of-month::before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    right: 0;
+    position: absolute;
+    border-right: solid red 0;
+    border-bottom: solid #ffffff 0.8rem;
+    border-top: solid green 0;
+    border-left: solid 0.6rem #d7d0bf;
+    bottom: 0;
+  }
+  .year {
+    text-align: center;
+    font-weight: bold;
+    color: #da9696;
+  }
 }
