--- a/web/themes/custom/icosaedrico/css/base/base.css
+++ b/web/themes/custom/icosaedrico/css/base/base.css
@@ -33,13 +33,14 @@ h1, .h1 {
 }
 h2, .h2 {
   font-family: "Lobster", sans-serif !important;
-  font-size: 1.6rem !important;
+  font-size: 2.2rem !important;
   font-weight: 300 !important;
 }
 h3, .h3 {
+  color: var(--black-800);
   font-family: "Reem Kufi", sans-serif !important;
   font-size: 1.2rem !important;
-  font-weight: 500;
+  font-weight: 800 !important;
   text-transform: uppercase;
   line-height: 1.75rem;
 }
@@ -101,7 +102,19 @@ h4, .h4 {
 
 /* Containers */
 
-.container-sm { max-width: 576px;}
-.container-md { max-width: 768px;}
-.container-lg { max-width:  992px;}
-.container-xl { max-width:  1200px;}
+.container-xs { max-width: 360px;}
+.container-sm { max-width: 480px;}
+.container-md { max-width: 736px;}
+.container-lg { max-width:  1056px;}
+.container-special { max-width: 1312px;}
+.container-xl { max-width:  1440px;}
+
+
+
+/******  LAYOUT  ******/
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100dvh;
+}
