--- a/web/themes/custom/icosaedrico/components/templates/blog_teaser/blog_teaser.twig
+++ b/web/themes/custom/icosaedrico/components/templates/blog_teaser/blog_teaser.twig
@@ -12,7 +12,7 @@
 ]
 %}
 <div class="{{ classes_wrapper|join(' ') }}">
-    <div class="blog-teaser__date me-4">
+    <div class="blog-teaser__date me-4 hidden md:block">
       {% block media %}{% endblock %}
     </div>
   <div class="{{ classes_body|join(' ') }}">
