--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.twig
@@ -44,7 +44,7 @@
     {% endif %}
     {# <div class="{{ branding_classes_slogan|safe_join(' ') }}">{{ site_slogan }}</div> #}
     <div class="{{ branding_classes_slogan|safe_join(' ') }}">
-      <span class="branding__slogan--text">{{ site_slogan }}</span><span class="branding__slogan--suffix">{{ "and other stuff"|t }}</span>
+      <span class="branding__slogan--text">{{ site_slogan }}</span>
     </div>
   </div>
 {% endblock %}
