--- a/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
@@ -84,7 +84,7 @@
     {{ page.footer }}
       <span>www.xacobe.net</span>
       <img src="/themes/custom/icosaedrico/logo_old.png" alt="Logo">
-        <span>© 2006 -2024</span>
+        <span>© 2006 - {{ "now"|date("Y") }}</span>
   </aside>
   </footer>
 </div>
