--- a/web/themes/custom/icosaedrico/components/atoms/button/button.twig
+++ b/web/themes/custom/icosaedrico/components/atoms/button/button.twig
@@ -7,7 +7,7 @@
     'btn-' ~ button_color|clean_class,
     button_color == "link" ? "p-0",
     button_size ? "btn-" ~ button_size,
-    button_size == "sm" ? "text-xs uppercase",
+    button_size == "sm" ? "text-xs",
     button_text_size ? "btn-" ~ button_text_size,
     button_outline ? "btn-outline",
     button_glass ? "btn-glass",
