--- a/web/themes/custom/icosaedrico/components/atoms/badge/badge.css
+++ b/web/themes/custom/icosaedrico/components/atoms/badge/badge.css
@@ -1,10 +1,10 @@
 .badge-tag {
-    background-color: var(--black-50) !important;
+    background-color: #d8d8d8  !important;
     color: var(--black-800) !important;
     font-size: 0.6rem !important;
     text-transform: uppercase !important;
     border-radius: 0 !important;
-    border: solid 1px var(--black-50) !important;
+    border: solid 1px #d8d8d8 !important;
     position: relative;
     padding-inline-start: .4rem;
 
@@ -12,7 +12,7 @@
       content: "";
       display: block;
       background-color: transparent;
-      border: solid 0.55rem var(--black-50);
+      border: solid 0.55rem #d8d8d8;
       border-left-color: transparent;
       border-top-color: transparent;
       border-bottom-color: transparent;
