--- a/web/themes/custom/icosaedrico/templates/layouts/html.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/html.html.twig
@@ -29,6 +29,8 @@
     <head-placeholder token="{{ placeholder_token }}">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ND87JY7Q98"></script>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
