--- a/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/page.html.twig
@@ -57,7 +57,7 @@
 
   {{ page.help }}
 
-  <main role="main" class="lg:px-24 md:px-8 px-4 pb-8 mx-auto">
+  <main role="main" class="lg:px-24 md:px-8 px-4 pb-8">
     <a id="main-content" tabindex="-1"></a>
     {# link is in html.html.twig #}
 
