--- a/web/themes/custom/icosaedrico/templates/layouts/page--node--30.html.twig
+++ b/web/themes/custom/icosaedrico/templates/layouts/page--node--30.html.twig
@@ -45,7 +45,7 @@
 #}
 
 <div class="page-wrapper {{ is_front ? 'frontpage' : '' }}">
-  <main role="main" class="lg:px-24 md:px-8 px-4 py-8 mx-auto">
+  <main role="main" class="lg:px-24 md:px-8 px-4 pb-8">
     <a id="main-content" tabindex="-1"></a>
     {# link is in html.html.twig #}
 
